--- a/Core/View/DocumentStitcher.html.twig
+++ b/Core/View/DocumentStitcher.html.twig
@@ -149,7 +149,7 @@
                                                     <a href="{{ doc.url() }}">{{ doc.codigo }}</a>
                                                 </td>
                                                 <td>{{ doc.observaciones | slice(0, 60) | raw }}</td>
-                                                <td class="text-right text-nowrap">{{ fsc.toolBox().coins().format(doc.total) }}</td>
+                                                <td class="text-right text-nowrap">{{ money(doc.total) }}</td>
                                                 <td class="text-right text-nowrap">{{ doc.fecha }}</td>
                                             </tr>
                                         {% else %}
@@ -240,11 +240,11 @@
                         &nbsp;
                         <i class="far fa-clock fa-fw" aria-hidden="true"></i> {{ doc.hora }}
                         <br/>
-                        {{ trans('net') }}: {{ fsc.toolBox().coins().format(doc.neto) }}
+                        {{ trans('net') }}: {{ money(doc.neto) }}
                         &nbsp;
-                        {{ trans('taxes') }}: {{ fsc.toolBox().coins().format(doc.totaliva) }}
+                        {{ trans('taxes') }}: {{ money(doc.totaliva) }}
                         &nbsp;
-                        {{ trans('total') }}: {{ fsc.toolBox().coins().format(doc.total) }}
+                        {{ trans('total') }}: {{ money(doc.total) }}
                     </p>
                 </div>
             </div>
