--- a/Core/View/Error/TemplateError.html.twig
+++ b/Core/View/Error/TemplateError.html.twig
@@ -7,11 +7,11 @@
                 <br/><br/>
                 <div class="jumbotron">
                     <h1>
-                        <i class="fas fa-bug" aria-hidden="true"></i> {{ i18n.trans('template-error') }}:
+                        <i class="fas fa-bug" aria-hidden="true"></i> {{ trans('template-error') }}:
                     </h1>
                     <hr class="my-4">
-                    <p>{{ i18n.trans('template') }}: {{ template }}</p>
-                    <p>{{ i18n.trans('controller') }}: {{ controllerName }}</p>
+                    <p>{{ trans('template') }}: {{ template }}</p>
+                    <p>{{ trans('controller') }}: {{ controllerName }}</p>
                 </div>
             </div>
         </div>
