--- a/Core/View/Tab/AttachedFilePreview.html.twig
+++ b/Core/View/Tab/AttachedFilePreview.html.twig
@@ -5,7 +5,7 @@
     <div class="card-body">
         <div class="dropdown">
             <button class="btn btn-outline-primary dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
-                <i class="fas fa-cloud-download-alt"></i> {{ i18n.trans('download') }}
+                <i class="fas fa-cloud-download-alt"></i> {{ trans('download') }}
             </button>
             <div class="dropdown-menu">
                 <a class="dropdown-item" target="_blank" href="{{ asset(file.url('download')) }}">
