--- a/Core/View/AdminPlugins.html.twig
+++ b/Core/View/AdminPlugins.html.twig
@@ -122,7 +122,7 @@
                         <div class="modal-body">
                             <div class="form-group">
                                 {{ trans('select-plugin-zip-file') }}
-                                <input type="file" name="plugin[]" multiple="" accept="application/zip" required=""/>
+                                <input type="file" name="plugin[]" multiple="" accept="application/zip" required/>
                                 {% if fsc.getMaxFileUpload() >= 99 %}
                                     <small class="form-text text-muted">
                                         {{ trans('help-server-accepts-filesize', {'%size%': fsc.getMaxFileUpload()}) }}
