--- a/Core/View/Error/AccessDenied.html.twig
+++ b/Core/View/Error/AccessDenied.html.twig
@@ -16,11 +16,11 @@
                     <div class="card-body">
                         <h1 class="h2">
                             <i class="fas fa-lock" aria-hidden="true"></i>
-                            {{ i18n.trans('access-denied') }}
+                            {{ trans('access-denied') }}
                         </h1>
                         {{ controllerName }}
                         <hr/>
-                        <p>{{ i18n.trans('access-denied-p') }}</p>
+                        <p>{{ trans('access-denied-p') }}</p>
                     </div>
                 </div>
             </div>
