--- a/Core/View/Error/ControllerNotFound.html.twig
+++ b/Core/View/Error/ControllerNotFound.html.twig
@@ -8,13 +8,13 @@
                 <div class="jumbotron">
                     <h1>
                         <i class="fas fa-bug fa-fw" aria-hidden="true"></i>
-                        {{ i18n.trans('controller-not-found') }}:
+                        {{ trans('controller-not-found') }}:
                     </h1>
                     <hr class="my-4">
                     <b>{{ controllerName }}</b>
                     <br/><br/>
                     <a href="{{ asset('Wizard') }}" class="btn btn-warning">
-                        <i class="fas fa-wrench fa-fw" aria-hidden="true"></i> {{ i18n.trans('wizard') }}
+                        <i class="fas fa-wrench fa-fw" aria-hidden="true"></i> {{ trans('wizard') }}
                     </a>
                 </div>
             </div>
