--- a/Core/View/Login/Login.html.twig
+++ b/Core/View/Login/Login.html.twig
@@ -21,7 +21,7 @@
                                         </span>
                                     </span>
                                     <input type="text" name="fsNick" class="form-control" maxlength="50"
-                                           placeholder="{{ trans('user') }}" required="" autocomplete="off"
+                                           placeholder="{{ trans('user') }}" required autocomplete="off"
                                            autofocus=""/>
                                 </div>
                             </div>
@@ -33,7 +33,7 @@
                                         </span>
                                     </span>
                                     <input type="password" name="fsPassword" class="form-control" maxlength="50"
-                                           placeholder="{{ trans('password') }}" required="" autocomplete="off"/>
+                                           placeholder="{{ trans('password') }}" required autocomplete="off"/>
                                 </div>
                                 <a href="#" class="btn btn-block btn-link" data-toggle="modal"
                                    data-target="#newPasswordModal">
@@ -92,7 +92,7 @@
                                     </span>
                                 </span>
                                 <input type="text" name="fsNewUserPasswd" class="form-control" maxlength="50"
-                                       placeholder="{{ trans('user') }}" required="" autocomplete="off"/>
+                                       placeholder="{{ trans('user') }}" required autocomplete="off"/>
                             </div>
                         </div>
                         <div class="form-group">
@@ -103,7 +103,7 @@
                                     </span>
                                 </span>
                                 <input type="password" name="fsNewPasswd" class="form-control" maxlength="50"
-                                       placeholder="{{ trans('new-password') }}" required="" autocomplete="off"/>
+                                       placeholder="{{ trans('new-password') }}" required autocomplete="off"/>
                             </div>
                         </div>
                         <div class="form-group">
@@ -115,7 +115,7 @@
                                 </span>
                                 <input type="password" name="fsNewPasswd2" class="form-control" maxlength="50"
                                        placeholder="{{ trans('repeat-new-password') }}"
-                                       required="" autocomplete="off"/>
+                                       required autocomplete="off"/>
                             </div>
                         </div>
                         <div class="form-group">
