--- a/Core/View/Master/EditListViewInLine.html.twig
+++ b/Core/View/Master/EditListViewInLine.html.twig
@@ -20,10 +20,10 @@
 {% set currentView = fsc.getCurrentView() %}
 
 <script>
-    var editListViewDeleteCancel = "{{ i18n.trans('cancel') }}";
-    var editListViewDeleteConfirm = "{{ i18n.trans('confirm') }}";
-    var editListViewDeleteMessage = "{{ i18n.trans('are-you-sure') }}";
-    var editListViewDeleteTitle = "{{ i18n.trans('confirm-delete') }}";
+    var editListViewDeleteCancel = "{{ trans('cancel') }}";
+    var editListViewDeleteConfirm = "{{ trans('confirm') }}";
+    var editListViewDeleteMessage = "{{ trans('are-you-sure') }}";
+    var editListViewDeleteTitle = "{{ trans('confirm-delete') }}";
 </script>
 
 <div class="{{ currentView.settings.card ? '' : 'container-fluid' }}">
@@ -43,14 +43,14 @@
     {% if currentView.settings.btnNew %}
         {% set formName = 'form' ~ currentView.getViewName() ~ 'New' %}
         <form id="{{ formName }}" method="post" enctype="multipart/form-data">
+            {{ formToken() }}
             <input type="hidden" name="action" value="insert"/>
             <input type="hidden" name="activetab" value="{{ currentView.getViewName() }}"/>
-            <input type="hidden" name="multireqtoken" value="{{ fsc.multiRequestProtection.newToken() }}"/>
             <div class="card border-success shadow mb-2">
                 <div class="card-body p-2">
                     <button class="btn btn-sm btn-outline-success" type="button" data-toggle="collapse" data-target="#{{ formName }}Collapse" aria-expanded="false">
                         <i class="fas fa-plus-square fa-fw" aria-hidden="true"></i>
-                        {{ i18n.trans('add') }}
+                        {{ trans('add') }}
                     </button>
                     &nbsp;
                     {{ currentView.title }}
@@ -66,7 +66,7 @@
                             <div class="col-sm-2 text-right">
                                 <button class="btn btn-sm btn-success" type="submit">
                                     <i class="fas fa-save fa-fw" aria-hidden="true"></i>
-                                    <span class="d-none d-sm-inline-block">{{ i18n.trans('save') }}</span>
+                                    <span class="d-none d-sm-inline-block">{{ trans('save') }}</span>
                                 </button>
                             </div>
                         </div>
@@ -80,10 +80,10 @@
     {% for counter, model in currentView.cursor %}
         {% set formName = 'form' ~ currentView.getViewName() ~ counter %}
         <form id="{{ formName }}" method="post" enctype="multipart/form-data">
+            {{ formToken() }}
             <input type="hidden" name="action" value="edit"/>
             <input type="hidden" name="activetab" value="{{ currentView.getViewName() }}"/>
             <input type="hidden" name="code" value="{{ model.primaryColumnValue() }}"/>
-            <input type="hidden" name="multireqtoken" value="{{ fsc.multiRequestProtection.newToken() }}"/>
             <div class="card shadow mb-2"{% if currentView.selected == model.primaryColumnValue() %} id="EditListViewSelected"{% endif %}>
                 <div class="form-row align-items-end">
                     <div class="col pt-2">
@@ -93,7 +93,7 @@
                     </div>
                     <div class="col-sm-2 text-right pb-2 pr-3">
                         {% if currentView.settings.btnDelete %}
-                            <button type="button" class="btn btn-sm btn-danger" title="{{ i18n.trans('delete') }}"
+                            <button type="button" class="btn btn-sm btn-danger" title="{{ trans('delete') }}"
                                     onclick="editListViewDelete('{{ currentView.getViewName() ~ counter }}');">
                                 <i class="fas fa-trash-alt fa-fw" aria-hidden="true"></i>
                             </button>
@@ -102,12 +102,12 @@
                         {% set row = currentView.getRow('actions') %}
                         {{ row.render(false, currentView.getViewName() ~ counter) | raw }}
                         {% if currentView.settings.btnUndo %}
-                            <button class="btn btn-sm btn-secondary" type="reset" title="{{ i18n.trans('undo') }}">
+                            <button class="btn btn-sm btn-secondary" type="reset" title="{{ trans('undo') }}">
                                 <i class="fas fa-undo fa-fw" aria-hidden="true"></i>
                             </button>
                         {% endif %}
                         {% if currentView.settings.btnSave %}
-                            <button class="btn btn-sm btn-primary" type="submit" title="{{ i18n.trans('save') }}">
+                            <button class="btn btn-sm btn-primary" type="submit" title="{{ trans('save') }}">
                                 <i class="fas fa-save fa-fw" aria-hidden="true"></i>
                             </button>
                         {% endif %}
