--- a/Core/View/Master/ListController.html.twig
+++ b/Core/View/Master/ListController.html.twig
@@ -102,7 +102,7 @@
                         <span class="d-none d-sm-inline-block">{{ view.title }}</span>
                     {% endif %}
                     {% if view.count > 0 %}
-                        <span class="badge badge-secondary">{{ fsc.toolBox().numbers().format(view.count, 0) }}</span>
+                        <span class="badge badge-secondary">{{ number(view.count, 0) }}</span>
                     {% endif %}
                 </a>
             </li>
