--- a/Core/View/Master/PanelControllerTop.html.twig
+++ b/Core/View/Master/PanelControllerTop.html.twig
@@ -107,7 +107,7 @@
                     <i class="{{ view.icon }}" aria-hidden="true"></i>
                     <span class="d-none d-sm-inline-block">{{ view.title }}</span>
                     {% if view.count > 0 %}
-                        <span class="badge badge-secondary">{{ fsc.toolBox().numbers().format(view.count, 0) }}</span>
+                        <span class="badge badge-secondary">{{ number(view.count, 0) }}</span>
                     {% endif %}
                 </a>
             </li>
