--- a/Core/View/MegaSearch.html.twig
+++ b/Core/View/MegaSearch.html.twig
@@ -55,7 +55,7 @@
                            aria-controls="v-pills-{{ key }}" aria-expanded="true">
                             <span class="badge badge-secondary float-right">{{ result.results | length }}</span>
                             <i class="{{ result.icon }} fa-fw"></i>
-                            {{ i18n.trans(result.title) }}
+                            {{ trans(result.title) }}
                         </a>
                     {% endfor %}
                 </div>
@@ -67,7 +67,7 @@
                         <div class="tab-pane fade{{ active }}" id="v-pills-{{ key }}" role="tabpanel"
                              aria-labelledby="v-pills-{{ key }}-tab">
                             <div class="card shadow">
-                                {{ _self.showSearchResults(result, i18n) }}
+                                {{ _self.showSearchResults(result) }}
                             </div>
                         </div>
                     {% endfor %}
@@ -77,19 +77,16 @@
     </div>
 {% endblock %}
 
-{% macro showSearchResults(result, i18n) %}
+{% macro showSearchResults(result) %}
     <div class="table-responsive">
         <table class="table table-striped table-hover">
             <thead>
             <tr>
                 {% for key, column in result.columns %}
                     {% if key == 'icon' %}
-                        <th>
-                        </th>
+                        <th></th>
                     {% else %}
-                        <th>
-                            {{ i18n.trans(column) | capitalize }}
-                        </th>
+                        <th>{{ trans(column) | capitalize }}</th>
                     {% endif %}
                 {% endfor %}
             </tr>
