--- a/Core/View/Tab/ApiAccess.html.twig
+++ b/Core/View/Tab/ApiAccess.html.twig
@@ -1,22 +1,22 @@
 <form action="" method="post">
+    {{ formToken() }}
     <input type="hidden" name="action" value="edit-rules" />
     <input type="hidden" name="activetab" value="{{ fsc.getCurrentView().getViewName() }}" />
-    <input type="hidden" name="multireqtoken" value="{{ fsc.multiRequestProtection.newToken() }}"/>
     <div class="card shadow">
         <div class="card-body text-right">
             <button type="submit" class="btn btn-sm btn-primary">
-                <i class="fas fa-save fa-fw"></i> {{ i18n.trans('save') }}
+                <i class="fas fa-save fa-fw"></i> {{ trans('save') }}
             </button>
         </div>
         <div class="table-responsive">
             <table class="table table-hover mb-0">
                 <thead>
                     <tr>
-                        <th>{{ i18n.trans('resource') }}</th>
-                        <th class="text-center">{{ i18n.trans('allow-get-data') }}</th>
-                        <th class="text-center">{{ i18n.trans('allow-put-data') }}</th>
-                        <th class="text-center">{{ i18n.trans('allow-post-data') }}</th>
-                        <th class="text-center">{{ i18n.trans('allow-delete-data') }}</th>
+                        <th>{{ trans('resource') }}</th>
+                        <th class="text-center">{{ trans('allow-get-data') }}</th>
+                        <th class="text-center">{{ trans('allow-put-data') }}</th>
+                        <th class="text-center">{{ trans('allow-post-data') }}</th>
+                        <th class="text-center">{{ trans('allow-delete-data') }}</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -55,7 +55,7 @@
                     {% else %}
                         <tr class="table-warning">
                             <td colspan="5">
-                                {{ i18n.trans('no-data') }}
+                                {{ trans('no-data') }}
                             </td>
                         </tr>
                     {% endfor %}
@@ -64,7 +64,7 @@
         </div>
         <div class="card-body text-right">
             <button type="submit" class="btn btn-sm btn-primary">
-                <i class="fas fa-save fa-fw"></i> {{ i18n.trans('save') }}
+                <i class="fas fa-save fa-fw"></i> {{ trans('save') }}
             </button>
         </div>
     </div>
