--- a/Core/View/Wizard-2.html.twig
+++ b/Core/View/Wizard-2.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * This file is part of FacturaScripts
- * Copyright (C) 2017-2022 Carlos Garcia Gomez <carlos@facturascripts.com>
+ * Copyright (C) 2017-2023 Carlos Garcia Gomez <carlos@facturascripts.com>
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Lesser General Public License as
@@ -23,9 +23,7 @@
     <div class="bg-primary pt-5 pb-5">
         <div class="container">
             <div class="row">
-                <div class="col">
-                    {{ parent() }}
-                </div>
+                <div class="col">{{ parent() }}</div>
             </div>
         </div>
         <br/>
@@ -41,41 +39,41 @@
     {% set codretencion = appSettings.get('default', 'codretencion') %}
 
     <div class="container" style="margin-top: -100px;">
-        <div class="card shadow mb-5">
-            <div class="card-body">
-                <h1 class="h3">
-                    <i class="fas fa-magic" aria-hidden="true"></i> {{ i18n.trans('wizard') }}
-                    <a href="{{ fsc.url() }}" class="btn btn-sm btn-outline-secondary"
-                       title="{{ i18n.trans('refresh') }}">
-                        <i class="fas fa-redo" aria-hidden="true"></i>
-                    </a>
-                </h1>
-                <p>{{ i18n.trans('wizard-p') }}</p>
-                <hr/>
-                <form action="#" method="post" class="form" id="formWizard">
-                    <input type="hidden" name="action" value="step2"/>
-                    {{ formToken() }}
+        <form action="#" method="post" class="form" id="formWizard">
+            {{ formToken() }}
+            <input type="hidden" name="action" value="step2"/>
+            <div class="card shadow mb-5">
+                <div class="card-body">
+                    <h1 class="h3">
+                        <i class="fas fa-magic" aria-hidden="true"></i> {{ trans('wizard') }}
+                        <a href="{{ fsc.url() }}" class="btn btn-sm btn-outline-secondary"
+                           title="{{ trans('refresh') }}">
+                            <i class="fas fa-redo" aria-hidden="true"></i>
+                        </a>
+                    </h1>
+                    <p>{{ trans('wizard-p') }}</p>
+                    <hr/>
                     <div class="form-row">
                         <div class="col-sm-4">
                             <div class="form-group">
                                 {{ forms.simpleSelect('regimeniva', 'regimeniva', fsc.empresa.regimeniva,
-                                    fsc.getRegimenIva(), i18n.trans('vat-regime')) }}
+                                    fsc.getRegimenIva(), trans('vat-regime')) }}
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="form-group">
                                 {{ forms.simpleSelect('codimpuesto', 'codimpuesto', codimpuesto,
-                                    fsc.getSelectValues('Impuesto', true), i18n.trans('default-tax')) }}
+                                    fsc.getSelectValues('Impuesto', true), trans('default-tax')) }}
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="form-group">
-                                <label class="mb-1">{{ i18n.trans('cost-price-policy') }}</label>
+                                <label class="mb-1">{{ trans('cost-price-policy') }}</label>
                                 <select name="costpricepolicy" class="form-control">
                                     <option value="">------</option>
-                                    <option value="last-price">{{ i18n.trans('last-purchase-price') }}</option>
-                                    <option value="average-price">{{ i18n.trans('average-purchase-price') }}</option>
-                                    <option value="actual-price">{{ i18n.trans('actual-cost-price') }}</option>
+                                    <option value="last-price">{{ trans('last-purchase-price') }}</option>
+                                    <option value="average-price">{{ trans('average-purchase-price') }}</option>
+                                    <option value="actual-price">{{ trans('actual-cost-price') }}</option>
                                 </select>
                             </div>
                         </div>
@@ -84,43 +82,43 @@
                         <div class="col-sm-auto">
                             <div class="form-group form-check pr-3">
                                 <input type="checkbox" name="defaultplan" value="1" id="checkboxPlan"
-                                       class="form-check-input" checked=""/>
-                                <label for="checkboxPlan">{{ i18n.trans('load-def-acc-plan') }}</label>
+                                       class="form-check-input" checked/>
+                                <label for="checkboxPlan">{{ trans('load-def-acc-plan') }}</label>
                             </div>
                         </div>
                         <div class="col-sm-auto">
                             <div class="form-group form-check pr-3">
                                 {% if appSettings.get('default', 'ventasinstock') %}
                                     <input type="checkbox" name="ventasinstock" value="1" id="cbNoStock"
-                                           class="form-check-input" checked=""/>
+                                           class="form-check-input" checked/>
                                 {% else %}
                                     <input type="checkbox" name="ventasinstock" value="1" id="cbNoStock"
                                            class="form-check-input"/>
                                 {% endif %}
-                                <label for="cbNoStock">{{ i18n.trans('allow-sale-without-stock-n') }}</label>
+                                <label for="cbNoStock">{{ trans('allow-sale-without-stock-n') }}</label>
                             </div>
                         </div>
                         <div class="col-sm-auto">
                             <div class="form-group form-check">
                                 {% if appSettings.get('default', 'updatesupplierprices') %}
                                     <input type="checkbox" name="updatesupplierprices" value="1"
-                                           id="cbUpdateSupplierPrices" class="form-check-input" checked=""/>
+                                           id="cbUpdateSupplierPrices" class="form-check-input" checked/>
                                 {% else %}
                                     <input type="checkbox" name="updatesupplierprices" value="1"
                                            id="cbUpdateSupplierPrices" class="form-check-input"/>
                                 {% endif %}
-                                <label for="cbUpdateSupplierPrices">{{ i18n.trans('update-supplier-prices') }}</label>
+                                <label for="cbUpdateSupplierPrices">{{ trans('update-supplier-prices') }}</label>
                             </div>
                         </div>
                     </div>
-                    <div class="text-right">
-                        <button type="submit" class="btn btn-primary" id="btnWizard">
-                            {{ i18n.trans('continue') }}
-                        </button>
-                    </div>
-                </form>
+                </div>
+                <div class="card-footer text-right">
+                    <button type="submit" class="btn btn-primary" id="btnWizard">
+                        {{ trans('continue') }}
+                    </button>
+                </div>
             </div>
-        </div>
+        </form>
         <br/>
     </div>
 {% endblock %}
