--- a/Core/View/Master/MenuTemplate.html.twig
+++ b/Core/View/Master/MenuTemplate.html.twig
@@ -103,19 +103,19 @@
                             {% endfor %}
                             <li class="nav-item{{ template == 'MegaSearch.html.twig' ? ' active' : '' }}"
                                 title="{{ trans('search') }}">
-                                <a class="nav-link" href="MegaSearch">
+                                <a class="nav-link" href="MegaSearch" id="menuIconSearch">
                                     <i class="fas fa-search" aria-hidden="true"></i>
                                 </a>
                             </li>
                             <li class="nav-item" title="{{ trans('help') }}">
                                 <a class="nav-link" href="https://facturascripts.com/ayuda" rel="nofollow"
-                                   target="_blank">
+                                   target="_blank" id="menuIconHelp">
                                     <i class="fas fa-question-circle" aria-hidden="true"></i>
                                 </a>
                             </li>
                             <li class="nav-item dropdown" title="{{ trans('user') }}">
                                 <a class="nav-link dropdown-toggle mr-md-2" href="#" data-toggle="dropdown"
-                                   aria-haspopup="true" aria-expanded="false">
+                                   aria-haspopup="true" aria-expanded="false" id="menuIconUser">
                                     <i class="fas fa-user-circle fa-fw" aria-hidden="true"></i>
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="user-list">
